--- a/package.json
+++ b/package.json
@@ -2,6 +2,22 @@
   "name": "fitnessv1",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "homepage": "https://github.com/01Maya/Fitness#readme",
+  "bugs": {
+    "url": "https://github.com/01Maya/Fitness/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/01Maya/Fitness.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "module",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,9 +32,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.473.0",
-    "next": "14.2.16",
+    "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
